--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,20 @@
 Flask==3.0.2
+Werkzeug==3.0.1
+Jinja2==3.1.3
+itsdangerous==2.1.2
+click==8.1.7
+
 Flask-SQLAlchemy==3.1.1
 SQLAlchemy==2.0.25
-Werkzeug==3.0.1
-
-cloudinary==1.39.0
-python-dotenv==1.0.1
 
 gunicorn==21.2.0
 requests==2.31.0
+python-dotenv==1.0.1
 
-itsdangerous==2.1.2
-Jinja2==3.1.3
-click==8.1.7
+psycopg2-binary==2.9.9
 
-psycopg2-binary
-boto3
-botocore
-Flask
-flask
-psycopg2-binary
+boto3==1.34.7
+botocore==1.34.7
+
+cloudinary==1.39.0
 
