--- a/requirements.txt
+++ b/requirements.txt
@@ -4,17 +4,11 @@ Jinja2==3.1.3
 itsdangerous==2.1.2
 click==8.1.7
 
-Flask-SQLAlchemy==3.1.1
-SQLAlchemy==2.0.25
-
 gunicorn==21.2.0
-requests==2.31.0
-python-dotenv==1.0.1
 
-psycopg2-binary==2.9.9
-
-boto3==1.34.7
-botocore==1.34.7
-
-cloudinary==1.39.0
+boto3
+botocore
+requests
+python-dotenv
+psycopg2-binary
 
